jupyterhub/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: jupyterhub
  labels:
    app: jupyterhub
    app.kubernetes.io/managed-by: Helm
    chart: jupyterhub-2.0.0
    component: proxy-api
    heritage: Helm
    release: jupyterhub
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: proxy-public
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
  wildcardPolicy: None
